--- a/methodist/templates/methodist/base.html
+++ b/methodist/templates/methodist/base.html
@@ -20,6 +20,10 @@
         margin-bottom: 30px;
         margin-top: 30px;
     }
+    #a{
+        background-color: #2cb54a;
+        border: 1px solid #2cb54a;
+    }
 </style>
 <header class="mb-12" id="header">
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #008B8B;" >
@@ -38,7 +42,10 @@
                         <a class="nav-link active" href="{% url 'list-subjects' %}">Предмети</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'without' %}">Не визначені студенти</a>
+                        <a class="nav-link active" href="{% url 'without' %}">Не визначені студенти</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-danger" href="{% url 'logout' %}" id="a">Вийти</a>
                     </li>
                 </ul>
             </div>
