--- a/methodist/templates/methodist/rating.html
+++ b/methodist/templates/methodist/rating.html
@@ -3,6 +3,7 @@
 {% load static %}
 
 {% block content %}
+    {{ request.user }}
     <h2 class="text-center">{{ rating.name_subject }}</h2>
     <div class="container table-responsive">
         <table class="table table-striped">
@@ -21,30 +22,53 @@
             </tr>
             </thead>
             <tbody>
+            {% get_current_semester request.path as current_semester %}
+            {% tag rating.name_subject current_semester as exists_rating %}
+
             {% for i in rating.group.student_set.all %}
                 <tr id="user_row_{{ i.user.id }}">
                     <td>{{ i.user.id }}</td>
                     <td>{{ i.user.username }}</td>
                     <td>{{ i.group.name }}</td>
                 {% get_current_semester request.path as current_semester %}
-                    {% tag i.user.username rating.name_subject current_semester as exists_rating %}
-                    {% if exists_rating %}
-                        <td><input type="number" value="{{ exists_rating.rating_5 }}" name="rating_5" min="1"
+                    {% if i.user.id not in exists_rating %}
+                        <td><input type="number" value="" name="rating_5" min="1"
                                    id="id_rating_5"></td>
-                        <td><input type="number" value="{{ exists_rating.rating_12 }}" name="rating_12" min="1"
+                        <td><input type="number" value="" name="rating_12" min="1"
                                    id="id_rating_12"></td>
                         <td><input type="date" name="date_rating" required
-                                   value="{{ exists_rating.date_rating|date:'Y-m-d' }}" id="id_date_rating"></td>
-                        <td><input type="checkbox" {% if exists_rating.retransmission %}checked{% endif %}
+                                   value="" id="id_date_rating"></td>
+                        <td><input type="checkbox"
                                    name="retransmission" id="id_retransmission"></td>
-                        <td><input type="checkbox" {% if exists_rating.credited %}checked{% endif %}
+                        <td><input type="checkbox"
                                    name="credited" id="id_credited"></td>
 
                         <td>
                             <select name="teacher" id="id_teacher">
                                 <option value="">-------</option>
                                 {% for i in rating.teachers.all %}
-                                    {% if i.id == exists_rating.teacher %}
+                                        <option value="{{ i.id }}">{{ i.username }}</option>
+                                {% endfor %}
+                            </select>
+                        </td>
+                    {% else %}
+                        {% get_rating i.user.id exists_rating as rating_student %}
+                        <td><input type="number" value="{{ rating_student.rating_5 }}" name="rating_5" min="1"
+                                   id="id_rating_5"></td>
+                        <td><input type="number" value="{{ rating_student.rating_12 }}" name="rating_12" min="1"
+                                   id="id_rating_12"></td>
+                        <td><input type="date" name="date_rating" required
+                                   value="{{ rating_student.date_rating|date:'Y-m-d' }}" id="id_date_rating"></td>
+                        <td><input type="checkbox" {% if rating_student.retransmission %}checked{% endif %}
+                                   name="retransmission" id="id_retransmission"></td>
+                        <td><input type="checkbox" {% if rating_student.credited %}checked{% endif %}
+                                   name="credited" id="id_credited"></td>
+
+                        <td>
+                            <select name="teacher" id="id_teacher">
+                                <option value="">-------</option>
+                                {% for i in rating.teachers.all %}
+                                    {% if i == rating_student.teacher %}
                                         <option value="{{ i.id }}" selected>{{ i.username }}</option>
                                     {% else %}
                                         <option value="{{ i.id }}">{{ i.username }}</option>
@@ -52,28 +76,14 @@
                                 {% endfor %}
                             </select>
                         </td>
-
-                    {% else %}
-                        <td><input type="number" name="rating_5" min="0" required="" id="id_rating_5"></td>
-                        <td><input type="number" name="rating_12" min="0" id="id_rating_12"></td>
-                        <td><input type="date" name="date_rating" required="" id="id_date_rating"></td>
-                        <td><input type="checkbox" name="retransmission" id="id_retransmission"></td>
-                        <td><input type="checkbox" name="credited" id="id_credited"></td>
-
-                        <td>
-                            <select name="teacher" id="id_teacher">
-                                <option value="">-------</option>
-                                {% for i in rating.teachers.all %}
-                                    <option value="{{ i.id }}">{{ i.username }}</option>
-                                {% endfor %}
-                            </select>
-                        </td>
                     {% endif %}
+
                     <td id="action_{{ i.user.id }}">
-                        {% if exists_rating %}
+                        {% if i.user.id in exists_rating %}
+                            {% get_rating i.user.id exists_rating as rs %}
                             <a id="but_{{ i.id }}" class="btn btn-warning"
-                               onclick="updateRating({{ exists_rating.id }},
-                                                     {{ exists_rating.user }},
+                               onclick="updateRating({{ rs.id }},
+                                                     {{ rs.user.id }},
                                                      {{ current_semester }})">Оновити</a>
                         {% else %}
                             <a id="but_{{ i.id }}" class="btn btn-success"
